<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/calculadora_imc"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#930024"
        android:textColorHighlight="#670019"
        android:textColorLink="#7E001F"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="344dp"
        android:layout_height="208dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/inform_name"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <EditText
            android:id="@+id/heightEditNumber"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/inform_height"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <EditText
            android:id="@+id/weightEditNumber"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/inform_weight"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:onClick="handleCalculateIMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calcular"
        android:backgroundTint="#930024"
        android:foregroundTint="#930024"
        android:textColorHighlight="#930024"
        android:textColorHint="#930024"
        android:textColorLink="#930024"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.251" />

</androidx.constraintlayout.widget.ConstraintLayout>
